--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,11 @@ button {
 }
 
 .orderservice > .container {
-    padding: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px;
+    padding-right: 0px;
+
 }
 
 .orderservice-header {
