--- a/css/styles.css
+++ b/css/styles.css
@@ -60,12 +60,25 @@ button {
 .header {
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-    padding: 24px 0;
+    padding: 0px 0px;
 }
+/* .header {
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    padding: 24px 0;
+} */
 
 .header-container {
     display: flex;
 }
+
+.header>.container {
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
 
 .header-nav {
     display: flex;
@@ -88,10 +101,15 @@ button {
 }
 
 .header-menu-list {
-    display: flex;
+    display: none;
     align-items: center;
     gap: 40px;
 }
+/* .header-menu-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+} */
 
 .header-menu-link {
     font-weight: 500;
@@ -121,15 +139,27 @@ button {
 }
 
 .header-address {
+    display: flex;
     font-style: normal;
     margin-left: auto;
 }
+/* .header-address {
+    display: flex;
+    font-style: normal;
+    margin-left: auto;
+} */
 
 .header-contacts-list {
-    display: flex;
+    display: none;
     align-items: center;
     gap: 40px;
 }
+
+/* .header-contacts-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+} */
 
 .header-contacts-link {
     font-weight: 400;
@@ -144,10 +174,152 @@ button {
 .header-menu-link:hover,
 .header-menu-link:focus,
 .header-contacts-link:hover,
-.header-contacts-link:focus
- {
+.header-contacts-link:focus {
     color: #404bbf;
 }
+
+.header-mobile-menu {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    background-color: #fff;
+    padding-left: 16px;
+    padding-right: 24px;
+    padding-top: 24px;
+    padding-bottom: 36px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.header-mobile-menu-button {
+    display: block;   
+    padding: 0;
+    background-color: transparent; 
+    border: none;
+    width: 24px;
+    height: 24px;
+}
+
+.header-mobile-menu-button-icon {
+    fill: #2f2f37;
+}
+
+.header-mobile-menu-button-close {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;
+    margin-left: auto;
+    margin-bottom: 24px;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-mobile-menu-button-close-icon {
+    fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-mobile-menu-button-close:hover,
+.header-mobile-menu-button-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.header-mobile-menu-button-close:hover>svg,
+.header-mobile-menu-button-close:focus>svg {
+    fill: #ffffff;
+}
+
+.header-mobile-menu-list {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 40px;
+}
+
+.header-mobile-menu-link {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 24px 0;
+}
+
+.header-mobile-menu-item:first-child .header-mobile-menu-link {
+    color: #404bbf;
+}
+
+.header-mobile-menu-contacts-list {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 24px;
+    margin-bottom: 52px;
+}
+
+.header-mobile-menu-contacts-link {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 24px 0;
+}
+
+.header-mobile-menu-link:hover,
+.header-mobile-menu-link:focus,
+.header-mobile-menu-contacts-link:hover,
+.header-mobile-menu-contacts-link:focus {
+    color: #404bbf;
+}
+
+.header-mobile-menu-soc-list {
+    display: flex;
+    gap: 40px;
+}
+
+.header-mobile-menu-soc-list-item-link {
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-mobile-menu-soc-list-item-link:hover,
+.header-mobile-menu-soc-list-item-link:focus {
+    background-color: #31d0aa;
+}
+
+.header-mobile-menu-soc-list-item-icon {
+    fill: #f4f4fd;
+}
+
+
+
+
 
 .orderservice {
     background: #2e2f42;
@@ -178,7 +350,6 @@ button {
     padding-bottom: 0px;
     padding-left: 0px;
     padding-right: 0px;
-
 }
 
 .orderservice-header {
