--- a/css/styles.css
+++ b/css/styles.css
@@ -62,23 +62,14 @@ button {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
     padding: 0px 0px;
 }
-/* .header {
-    border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
-    padding: 24px 0;
-} */
 
 .header-container {
     display: flex;
 }
 
 .header>.container {
-    padding-top: 16px;
-    padding-bottom: 16px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 16px;
 }
-
 
 .header-nav {
     display: flex;
@@ -93,7 +84,7 @@ button {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
-    margin-right: 76px;
+    margin-right: 120px;
 }
 
 .header-logo-second {
@@ -105,11 +96,6 @@ button {
     align-items: center;
     gap: 40px;
 }
-/* .header-menu-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-} */
 
 .header-menu-link {
     font-weight: 500;
@@ -143,23 +129,12 @@ button {
     font-style: normal;
     margin-left: auto;
 }
-/* .header-address {
-    display: flex;
-    font-style: normal;
-    margin-left: auto;
-} */
 
 .header-contacts-list {
     display: none;
     align-items: center;
     gap: 40px;
 }
-
-/* .header-contacts-list {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-} */
 
 .header-contacts-link {
     font-weight: 400;
@@ -168,7 +143,7 @@ button {
     letter-spacing: 0.02em;
     color: #434455;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 24px 0;
+    padding: 24px 0; 
 }
 
 .header-menu-link:hover,
@@ -176,6 +151,19 @@ button {
 .header-contacts-link:hover,
 .header-contacts-link:focus {
     color: #404bbf;
+}
+
+.header-mobile-menu-button {
+    display: block;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    width: 24px;
+    height: 24px;
+}
+
+.header-mobile-menu-button-icon {
+    fill: #2f2f37;
 }
 
 .header-mobile-menu {
@@ -195,19 +183,6 @@ button {
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-}
-
-.header-mobile-menu-button {
-    display: block;   
-    padding: 0;
-    background-color: transparent; 
-    border: none;
-    width: 24px;
-    height: 24px;
-}
-
-.header-mobile-menu-button-icon {
-    fill: #2f2f37;
 }
 
 .header-mobile-menu-button-close {
@@ -316,10 +291,6 @@ button {
 .header-mobile-menu-soc-list-item-icon {
     fill: #f4f4fd;
 }
-
-
-
-
 
 .orderservice {
     background: #2e2f42;
@@ -936,7 +907,39 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
 @media screen and (min-width: 768px) {
+    .header>.container {
+        padding: 0px 16px;        
+    }
+
+    .header-menu-list {
+        display: flex;
+    }
+
+    .header-contacts-list {
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        flex-direction: column;
+        gap: 12px;
+        padding: 16px 0;
+    }
+
+    .header-contacts-item {
+        height: 14px;
+    }
+    
+    .header-contacts-link {
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+    }
+
+    .header-mobile-menu-button {
+        display: none;
+    }
+
     .container {
         width: 100%;
         max-width: 768px;
@@ -996,6 +999,27 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 1440px) {
+    .header-logo {
+        margin-right: 76px;
+    }
+
+    .header-contacts-list {
+        align-items: center;
+        flex-direction: row;
+        align-items: normal;
+        gap: 40px;
+        padding: 24px 0;
+    }
+
+    .header-contacts-item {
+        height: auto;
+    }
+    .header-contacts-link {
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+    }
+
     .container {
         width: 100%;
         max-width: 1158px;
