--- a/css/styles.css
+++ b/css/styles.css
@@ -553,19 +553,25 @@ button {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
 .footer {
     background: #2e2f42;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 0;
+    padding-bottom: 0;
 }
 
 .footer-content {
     display: flex;
-    align-items: baseline;
+    flex-wrap: wrap;
+    gap: 72px;
+    text-align: center;
 }
 
 .footer-content-info {
-    margin-right: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
 }
 
 .footer-logo {
@@ -577,7 +583,7 @@ button {
     text-transform: uppercase;
     color: #4d5ae5;
     display: inline-block;
-    margin-bottom: 16px;
+    margin-bottom: 16px;    
 }
 
 .footer-logo-second {
@@ -589,11 +595,13 @@ button {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
-    max-width: 264px;
+    text-align: left;
+    max-width: 100%;
+    
 }
 
 .footer-content-soc {
-    margin-right: 80px;
+    width: 100%;
 }
 
 .footer-subtitle {
@@ -607,7 +615,9 @@ button {
 
 .footer-soc-list {
     display: flex;
-    gap: 16px;
+    gap: 16px; 
+    justify-content: center;
+    width: 100%;
 }
 
 .footer-soc-list-item-link {
@@ -633,7 +643,10 @@ button {
 
 .footer-subscribe-line {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
+    width: 100%;
 }
 
 .footer-input {
@@ -721,9 +734,9 @@ button {
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
     position: absolute;
-    top: 50%;
+    top: 80px;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translateX(-50%);
     padding: 72px 24px 24px 24px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -995,7 +1008,32 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         max-width: calc((100% - 24px) / 2);
     }
 
+    .footer > .container {
+        padding-left: 108px;
+        padding-right: 108px;
+    }
 
+    .footer-content {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 24px;
+        row-gap: 72px;
+        text-align: left;
+    }
+
+    .footer-content-info {
+        max-width: 264px;
+    }
+
+    .footer-content-soc {
+            width: auto;
+    }
+
+    .footer-subscribe-line {
+        flex-wrap: nowrap;
+        gap: 24px;
+        justify-content: left;
+    }
 }
 
 @media screen and (min-width: 1440px) {
@@ -1074,4 +1112,29 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         max-width: calc((100% - 2 * 24px) / 3);
     }
 
+    .footer>.container {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+
+    .footer {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+
+    .footer-content {
+        flex-wrap: nowrap; 
+        align-items: baseline;
+    }
+
+    .footer-content-info {
+        min-width: 264px;
+        margin-right: 120px;
+    }
+    
+    .footer-content-soc {
+        margin-right: 80px;
+    }
+     
+    
 }
