--- a/css/styles.css
+++ b/css/styles.css
@@ -553,7 +553,6 @@ button {
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
 .footer {
     background: #2e2f42;
     padding-top: 0;
@@ -705,7 +704,7 @@ button {
 }
 
 .footer-button-subscribe:hover,
-.mfooter-button-subscribe:focus {
+.footer-button-subscribe:focus {
     background-color: #404bbf;
 }
 
@@ -727,17 +726,17 @@ button {
     pointer-events: auto;
 }
 
-.modal {
-    width: 408px;
-    min-height: 584px;
+.modal {    
+    width: 288px;
+    min-height: 623px;
     border-radius: 4px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background: #fcfcfc;
     position: absolute;
-    top: 80px;
+    top: 8px;
     left: 50%;
-    transform: translateX(-50%);
-    padding: 72px 24px 24px 24px;
+    transform: translateX(-50%);    
+    padding: 72px 16px 24px 16px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -867,15 +866,19 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-checkbox-wrapper {
-    margin-bottom: 24px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 24px;    
 }
 
 .modal-policy-text {
+    display: flex;
+    align-items: center;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
-}
+ }
 
 .modal-policy-text-span {
     width: 16px;
@@ -887,6 +890,12 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     align-items: center;
     justify-content: center;
     fill: transparent;
+    margin-right: 8px;
+    flex-shrink: 0;
+}
+
+.modal-policy-text-wrapper {
+    display: inline;
 }
 
 .modal-policy-checkbox:checked + .modal-policy-text > .modal-policy-text-span {
@@ -900,14 +909,15 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-policy-link {
+    white-space: nowrap;
     color: #4d5ae5;
 }
 
 .modal-button-send {
     display: block;
     min-width: 169px;
-    height: 56px;
-    margin: 24px auto;
+    height: 56px;    
+    margin: 24px auto 0px auto;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -919,7 +929,6 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #4d5ae5;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 
 @media screen and (min-width: 768px) {
     .header>.container {
@@ -990,6 +999,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .advantages-list-item {
         max-width: calc((100% - 24px) / 2);        
     }
+
     .advantages-list-item-subtitle {
         text-align: left;        
     }
@@ -1034,6 +1044,14 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
         gap: 24px;
         justify-content: left;
     }
+
+    .modal {
+        width: 408px;
+        min-height: 584px;
+        top: 96px;
+        padding: 72px 24px 24px 24px;
+    }
+
 }
 
 @media screen and (min-width: 1440px) {
@@ -1052,6 +1070,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .header-contacts-item {
         height: auto;
     }
+    
     .header-contacts-link {
         font-size: 16px;
         line-height: 1.5;
@@ -1135,6 +1154,8 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     .footer-content-soc {
         margin-right: 80px;
     }
-     
     
+    .modal {
+        top: 80px;
+    }
 }
