--- a/css/styles.css
+++ b/css/styles.css
@@ -713,7 +713,7 @@ button {
     height: 100%;
     position: fixed;
     top: 0;
-    background-color: rgba(46, 47, 66, 0.4);
+    background-color: #F1FCF9;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
@@ -1054,7 +1054,7 @@ transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1158px) {
     .header-logo {
         margin-right: 76px;
     }
